--- a/public/style.css
+++ b/public/style.css
@@ -94,6 +94,20 @@ section.chat__section {
   padding: 0px;
   background-image: url("abc.jpg");
   background-size: contain;
+  position: relative;
+}
+canvas {
+  position: absolute;
+  height: 800px;
+  width: 800px;
+}
+#piece{
+  width: 0;
+	height: 0;
+	border-left: 25px solid transparent;
+	border-right: 25px solid transparent;
+	border-bottom: 50px solid #555;
+  overflow: visible;
 }
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
@@ -101,6 +115,6 @@ section.chat__section {
   padding: 20px;
   font-size: 30px;
   text-align: center;
-  opacity: 0.8;
-  
+  opacity: 0.7;
+  color: rgba(0, 0, 0, 0);
 }
